Update build.gradle for WilderForge CI Backend