@@ -23,6 +23,11 @@ repositories {
     mavenCentral()
 }
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
+
 dependencies {
     testImplementation libs.guava.core
     testImplementation libs.junit
@@ -37,7 +42,9 @@ dependencies {
 task sourcesJar(type: Jar) {
     archiveClassifier.set("sources")
     from sourceSets.main.allSource
+    from sourceSets.test.allSource
 }
+build.dependsOn(sourcesJar)
 
 sourceSets {
     main {
@@ -58,11 +65,6 @@ sourceSets {
     }
 }
 
-artifacts {
-    archives jar
-    archives sourcesJar
-}
-
 test {
     testLogging {
         events "failed", "skipped"
@@ -71,33 +73,71 @@ test {
     }
 }
 
+ext.mavenLocalUrl = repositories.mavenLocal().url.toString()
+
+jar {
+	manifest {
+		attributes(
+			'Class-Path': configurations.runtimeClasspath.collect { it.getName() }.join(' '),
+			'MixinConfigs': 'mixins.json',
+			'Main-Class': 'net.fabricmc.loader.impl.launch.knot.KnotClient',
+			'Specification-Version': 8.0,
+			'Multi-Release': 'true'
+		)
+	}
+}
+
+tasks.register('checkArtifactExists') {
+    doLast {
+    
+    	if (project.hasProperty('force')) {
+			logger.lifecycle("Skipping artifact existence check due to --force flag.")
+			return
+		}
+		
+        def repoUrl = project.hasProperty('mavenRepoUrl') ? project.mavenRepoUrl : mavenLocalUrl
+        def artifactPath = "${repoUrl}/${project.group.replace('.', '/')}/${project.archivesBaseName}/${project.version}/${project.archivesBaseName}-${project.version}.jar"
+        logger.lifecycle("Checking if artifact exists at: $artifactPath")
+        
+        if (artifactPath.startsWith('file:/')) {
+            // Handle file URLs
+            def file = new File(new URI(artifactPath))
+            if (file.exists()) {
+                throw new IllegalStateException("Artifact '${project.group}:${project.archivesBaseName}:${project.version}' already exists. Publishing aborted.")
+            }
+        } else {
+            // Handle HTTP URLs
+            def url = new URL(artifactPath)
+            def connection = url.openConnection()
+            connection.setRequestMethod('HEAD')
+            if (connection.responseCode == 200) {
+				throw new IllegalStateException("Artifact '${project.group}:${project.archivesBaseName}:${project.version}' already exists. Publishing aborted.")
+            }
+        }
+        logger.lifecycle("Artifact does not exist, proceeding with publish.")
+    }
+}
+
+tasks.named('publish') {
+    dependsOn 'checkArtifactExists'
+}
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
             from components.java
+            groupId = project.group
+            artifactId = project.archivesBaseName
+            version = project.version
+
+            // Attach sources JAR to the publication
             artifact sourcesJar
         }
     }
-}
 
-task report {
-    doLast {
-        println "##vso[build.updatebuildnumber]${project.version}"
+    repositories {
+        maven {
+            url = uri(project.hasProperty('mavenRepoUrl') ? project.mavenRepoUrl : mavenLocalUrl) // Default to mavenLocal if no custom URL is provided
+        }
     }
 }
-
-tasks.withType(JavaCompile) {
-	options.forkOptions.jvmArgs += ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
-}
-
-def publishDir = file("$buildDir/repo")
-
-clean.doLast {
-    delete publishDir
-}
-
-publishing.repositories {
-    mavenLocal()
-}
-
-
